--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HW 11</title>
+    <link rel="stylesheet" href="./fonts/font.css">
+    <link rel="stylesheet" href="./style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-
-    <script src="script.js"></script>
+    <div class="container">
+        <p id="text">Some text</p>
+        <button id="show-hide">Hide text</button>
+        <button id="bigger">Increase</button>
+        <button id="smaller">Decrease</button>
+    </div>
 </body>
 
 </html>
