--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DZ 12</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
+    <div class="container">
 
-    <script src="script.js"></script>
+        <div class="forms">
+            <h1>Todo List</h1>
+            <input type="text" id="title" placeholder="enter title" class="form">
+            <input type="text" id="description" placeholder="enter description" class="form">
+            <select id="property">
+                <option value="low">Low</option>
+                <option value="mid">Mid</option>
+                <option value="high">High</option>
+            </select>
+            <button id="add">Add</button>
+        </div>
+
+        <ul id="List"></ul>
+    </div>
 </body>
 
 </html>
