--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DZ 18</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <script src="script.js"></script>
-</body>
+    <div class="container">
+        <div class="list">
+          <h2>Users</h2>
+          <div id="usersList">
+          </div>
+          <div class="buttons">
+            <button type="button" id="prevBtn">prev</button>
+            <button type="button" id="nextBtn">next</button>
+          </div>
+        </div>
+        
+        <div class="form">
+          <h2>Create New User</h2>
+          <form>
+            <input type="text" placeholder="first_name" name="first_name" id="inputFirstName">
+            <input type="text" placeholder="last_name" name="last_name" id="inputLastName">
+            <input type="email" placeholder="email" name="email" id="inputEmail">
+            <input type="text" placeholder="job" name="job" id="inputJob">
+            <input type="text" placeholder="id, only for del or upd" name="id" id="inputID">
+          </form>
+          <div class="buttons">
+            <button type="button" id="sendBtn">Send</button>
+            <button type="button" id="updBtn">Update</button>
+            <button type="button" id="delBtn">Delete</button>
+          </div>
+        </div>
+        <div class="list">
+          <h2>New Users</h2>
+          <div id="newUserList">
+        </div>
+        </div>
+      </div>
 
+      <div class="overlay" id="loginForm">
+        <div class="login-form">
+            <h2>Login</h2>
+            <input type="text" placeholder="email" id="email">
+            <input type="text" placeholder="password" id="password">
+            <button id="loginBtn">Login</button>
+            <p id="alert"></p>
+        </div>
+    </div>
+   
+</body>
 </html>
