--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DZ 20</title>
+  <title>Document</title>
   <script src="script.js" type="module" defer></script>
 
   <link rel="stylesheet" href="style.css">
