--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <header>
-    <button id="logOutBtn">log out</button>
+    <button id="logOutBtn" class="displayNone">log out</button>
   </header>
-  <div class="container">
+  <div class="container displayNone" id="main-div">
     <div class="list">
       <h2>Users</h2>
       <div id="usersList">
